unpackaged/main/default/objects/Lead/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>Date of birth</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>