unpackaged/main/default/objects/Lead/fields/Last_Form_Submitted_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Last_Form_Submitted_Campaign_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Form Submitted Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>