unpackaged/main/default/objects/Lead/fields/match_prefix__c.field-meta.xml
<CustomField>
    <fullName>match_prefix__c</fullName>
    <description>creates a prefix from the users first name and email prefix to use to match against accounts</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>this field is automatically populated in apex, it should not be manually populated</inlineHelpText>
    <label>match prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>