unpackaged/main/default/objects/Lead/fields/Reason_for_Interest__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Interest__c</fullName>
    <label>Reason for Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WomensHealth</fullName>
                <label>Learn more about our Women&#39;s Health Physicians</label>
            </value>
            <value>
                <fullName>General new patient inquiry</fullName>
            </value>
            <value>
                <fullName>Facility information</fullName>
            </value>
            <value>
                <fullName>OB/GYN</fullName>
                <isActive>false</isActive>
                <label>Learn more about pregnancy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>