unpackaged/main/default/objects/Lead/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <businessProcess>Patient Conversion</businessProcess>
    <label>Prospect</label>
</RecordType>