unpackaged/main/default/objects/Lead/recordTypes/Web_Form.recordType-meta.xml
<RecordType>
    <fullName>Web_Form</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__LeadToPatientProcess</businessProcess>
    <label>Web Form</label>
</RecordType>